core-web/apps/dotcms-ui/src/app/portlets/shared/dot-content-types-edit/components/form/content-types-form.component.scss
@use "variables" as *;
@use "dotcms-theme/utils/theme-variables" as *;
@import "mixins";

:host {
    display: block;

    ::ng-deep {
        .p-multiselect,
        searchable-dropdown .p-button {
            width: 100%;
        }
    }

    .form-workflow-community-message {
        margin-bottom: $spacing-4;
    }
}

.content-type__form {
    width: 522px;
}

